# huggingface-datasets_cocostuff

./: README.md  cocostuff.py  pyproject.toml
.github/workflows/: ci.yaml  push_to_hub.yaml
tests/: cocostuff_test.py
